workshop05/workshop05/setup/chaosmesh-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-httproute
  namespace: chaos-mesh
spec:
  parentRefs:
  - name: default-gtw
    namespace: default
    port: 80
  hostnames:
  #TODO: change to GATEWAY_IP address
  # - chaos-GATEWAY_IP.nip.io
  - chaos.168.144.48.112.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: chaos-dashboard
      namespace: chaos-mesh
      port: 2333
